# typed_ml

./: LICENSE  README.md  pyproject.toml
src/typed_ml/: __init__.py
src/typed_ml/domain/: imaging_data_schema.yaml  imaging_data_schema_auto.yaml  interfaces.py
src/typed_ml/examples/: not_safe.py  safe.py
src/typed_ml/services/: data.py  infere_schema.py  statistical_schema.py
